# holon-lab-trading

./: .cursorrules  .gitignore  BOOK.md  CLAUDE.md  Cargo.toml  EXPERIMENT_LOG.md  HOLON_CONTEXT.md  INVENTORY.md  LEARNINGS.md  MAGIC_NUMBERS.md  NEXT_MOVES.md  PLAN.md  README.md  STATUS.md  THOUGHT_IMPL_STATUS.md  THOUGHT_VOCAB.md  VISUAL_GRID_FIXES.md  VOCAB_EXPANSION.md  VOCAB_RISK.md  enterprise.sh  estimate_facts.py  holon-trader.service  requirements.txt  run_orchestration_test.sh  sweep_lr.sh  trader.sh  wat-vm.sh
archived/: 056-implementation-order.md  056-step3-plan.md  056-ward-forge.md  056-ward-reap.md  056-ward-scry.md  056-ward-sever.md  058-backlog.md  backlog-ward-session-20260414.md  guide-debt.md  ignorant-cache-review.md  metrics-backlog.md  orchestration.rs  rust-ward-findings.md  vocab-gap-analysis.md  ward-backlog.md
archived/docs/: EXPERIMENT_LOG.md  NEXT_MOVES.md  QUERIES.sql  STATUS.md  THOUGHT_IMPL_STATUS.md  VOCAB_UNDERDOGS.md
archived/pre-058/: 057-backlog.md
archived/pre-wat-native/: Cargo.toml  wat-vm.sh
archived/pre-wat-vm/: enterprise.rs
archived/python/: requirements.txt
archived/src-archived-pre007-desk/: candle.rs  lib.rs  sizing.rs
archived/src-inscription-6/: enums.rs  raw_candle.rs  scalar_accumulator.rs  window_sampler.rs
archived/wat-archived-inscription-2/: engram-gate.wat  newtypes.wat
archived/wat-archived-inscription-3/: divergence.wat  enterprise.wat  enums.wat  fibonacci.wat  indicator-bank.wat  keltner.wat  log-entry.wat  market-observer.wat  newtypes.wat  oscillators.wat  persistence.wat  post.wat  price-action.wat  proposal.wat  scalar-accumulator.wat  simulation.wat  trade.wat  treasury.wat  volatility.wat
archived/wat-archived-inscription-4/: broker.wat  candle.wat  ctx.wat  distances.wat  divergence.wat  engram-gate.wat  enums.wat  fibonacci.wat  ichimoku.wat  momentum.wat  newtypes.wat  oscillators.wat  paper-entry.wat  post.wat  proposal.wat  simulation.wat  stochastic.wat  structure.wat  thought-encoder.wat  timeframe.wat  trade-origin.wat  trade.wat  treasury.wat  volatility.wat  window-sampler.wat
archived/wat-archived-inscription-5/: divergence.wat  engram-gate.wat  enterprise.wat  enums.wat  exit-observer.wat  ichimoku.wat  keltner.wat  market-observer.wat  momentum.wat  newtypes.wat  paper-entry.wat  persistence.wat  price-action.wat  proposal.wat  (+9 more)
docs/: 029-implementation-phases.md  056-ward-gaze.md  056-ward-temper.md  057-backlog.md  058-backlog.md  BACKLOG.md  CIRCUIT.md  gaze-session-assessment.md  guide-debt.md  ignorant-cache-review.md  ignorant-services-review.md  metrics-backlog.md  phantom-rune-plan.md  rewrite-backlog.md  rust-backlog.md  src-reorg-backlog.md  the-beginning.rb  verification-sequence.md  vocab-review-beckman.md  vocab-review-hickey.md  ward-backlog-2.md  ward-backlog.md  wat-vm-backlog.md
experiments/: adaptive_buckets.rs  range_breathing.rs
rust/: Cargo.toml
rust/src/: db.rs  desk.rs  journal.rs  lib.rs  manager.rs  portfolio.rs  position.rs  run_db.rs  sizing.rs  thought.rs  treasury.rs  viewport.rs
rust/src/vocab/: mod.rs  oscillators.rs  persistence.rs
scripts/: adaptive_monitor.py  algebra_gauntlet.py  algebra_gauntlet_v3.py  algebra_gauntlet_v5.py  backtest_seeds.py  composed_signals.py  cosine_vote_test.py  count_consecutive_phases.py  diagnose_gate.py  directional_scan.py  ensemble_grade.py  explore_algebra.py  explore_anomaly.py  explore_field_series.py  explore_regime.py  explore_sequence_v2.py  explore_trajectory.py  fast_grade.py  fetch_btc.py  grade_gate.py  holon_directional.py  holon_quick_test.py  label_reversals.py  phase_coverage.py  raster_poc.py  raster_real.py  simulate_phase_exits.py  simulate_phase_trades.py  sweep_phase_smoothing.py  time_and_combos.py  validate_geometry.py
src/: broker.rs  candle.rs  ctx.rs  distances.rs  encoder_service.rs  engram_gate.rs  enterprise.rs  enums.rs  event.rs  exit_observer.rs  indicator_bank.rs  indicators.rs  journal.rs  ledger.rs  lib.rs  log_entry.rs  log_service.rs  main.rs  manager.rs  market_observer.rs  newtypes.rs  paper_entry.rs  portfolio.rs  position.rs  post.rs  proposal.rs  raw_candle.rs  risk.rs  run_db.rs  scalar_accumulator.rs  scale_tracker.rs  settlement.rs  shims.rs  simulation.rs  sizing.rs  state.rs  thought.rs  thought_encoder.rs  trade.rs  trade_origin.rs  (+2 more)
src-archived/: position.rs  window_sampler.rs
src-archived-pre007-desk/: enterprise.rs  journal.rs  state.rs  treasury.rs
tests/: adaptive_buckets.rs  bucket_sweep.rs  debug_scalar.rs  proof_001.rs  prove_ast_composition.rs  prove_bundle_idempotent.rs  prove_delta_braiding.rs  prove_incremental.rs  prove_indicator_rhythm.rs  prove_rhythm_with_subspace.rs  prove_typed_vocab.rs  range_compose.rs  range_discovery.rs  range_inflation.rs  sim_smoke.rs  test.rs  test_encoder.py  test_features.py  test_harness.py  test_integration.py  test_rule_tree.py  test_surprise_profile.py
trading/: __init__.py  darwinism.py  encoder.py  features.py  feed.py  harness.py  rule_tree.py  system.py  tracker.py
wat/: CIRCUIT.md  DISCOVERIES.md  GUIDE.md  ORDER.md  README.md  accumulation.wat  broker.wat  candle.wat  common.wat  ctx.wat  distances.wat  encoder-service.wat  engram-gate.wat  enterprise.wat  enums.wat  event.wat  exit-observer.wat  facts.wat  generalist.wat  indicator-bank.wat  journal.wat  ledger.wat  lib.wat  log-entry.wat  log-service.wat  main.wat  manager.wat  market-observer.wat  newtypes.wat  paper-entry.wat  portfolio.wat  position.wat  post.wat  proposal.wat  raw-candle.wat  risk.wat  scalar-accumulator.wat  settlement.wat  simulation.wat  sizing.wat  (+9 more)
wat-archived/: broker.wat  candle.wat  enterprise.wat  indicator-bank.wat  ledger.wat  market-observer.wat  position.wat  post.wat  scalar-accumulator.wat  sizing.wat  thought.wat  treasury.wat  window-sampler.wat
wat-archived-007/: paper-entry.wat
wat-archived-inscription-2/: log-entry.wat  proposal.wat
wat-archived-pre007-desk/: candle.wat  common.wat  enterprise.wat  exit-observer.wat  journal.wat  tuple-journal.wat
wat-tests/: test-scaffold.wat  test_scaffold.wat
(+1187 files in other folders)
