[package]
name = "holon-lab-trading"
version = "0.1.0"
edition = "2021"
publish = false
description = "Self-organizing trading enterprise, rebuilt on the wat language. Domain logic in wat/**/*.wat; Rust surface is two one-line macro invocations."

[[bin]]
name = "holon-lab-trading"
path = "src/main.rs"

[features]
# Slow tests are opt-in via per-concern features. `cargo test` runs
# only the fast `wat-tests/` suite via `tests/test.rs`. To run a
# specific slow test:
#
#   cargo test --release --features sim-smoke --test sim_smoke
#   cargo test --release --features proof-001 --test proof_001
#
# Each named feature gates one test binary that walks one
# `wat-tests-<name>/` directory. Adding a new slow concern is three
# steps: new wat-tests-<name>/ dir, new tests/<name>.rs binary, new
# feature line below.
sim-smoke = []
proof-001 = []

[dependencies]
wat        = { path = "../wat-rs" }
wat-macros = { path = "../wat-rs/wat-macros" }
parquet    = "53"
arrow      = "53"
chrono     = "0.4"
rusqlite   = { version = "0.31", features = ["bundled"] }
